--- a/solutions.tex
+++ b/solutions.tex
@@ -13,8 +13,10 @@
     {
         \centering
         {\Huge Vzorové riešenia \currentSeries. série \currentPartGenitive\ časti}\\[0pt]
-    } 
+    }
+
+    \vspace{0.5\baselineskip}
         
     \pagestyle{solutions}
-    \addSolutions      
+    \addSolutions    
 \end{document}
