--- a/solutions.tex
+++ b/solutions.tex
@@ -6,6 +6,8 @@
 \input{current}
 \input{custom}
 
+\RenewDocumentCommand{\currentFolder}{}{files/\seminarID/solutions}
+
 \begin{document}            
     \thispagestyle{first} 
     
