--- a/tasks.tex
+++ b/tasks.tex
@@ -6,6 +6,8 @@
 \input{current}
 \input{custom}
 
+\RenewDocumentCommand{\currentFolder}{}{files/\seminarID/tasks}
+
 \begin{document}            
     \thispagestyle{first} 
     
