--- a/files/fks/solutions/task6.tex
+++ b/files/fks/solutions/task6.tex
@@ -47,9 +47,9 @@ v~prípade ideálneho plynu platí.}
 $$kx^2  = pV = nRT $$
 $$k{\left(x+\Delta x\right)}^2 = nR\left(T+\Delta T\right)\text{.}$$
 
-Odčítaním týchto dvoch rovníc a~zanedbaním členu $k{\Delta x}^2$\footnote{Keďže vo fyzike nás často zaujíma ako sa veci majú 
+Odčítaním týchto dvoch rovníc a~zanedbaním členu $k{\Delta x}^2$,\footnote{Keďže vo fyzike nás často zaujíma ako sa veci majú 
 do \emph{prvého rádu}, tak si to môžeme dovoliť. Intuitívne si to môžete predstaviť, že ak je $\Delta x$ malé, tak ${\Delta x}^2$ 
-je o~niekoľko rádov menšie a~teda oproti $\Delta x$ zanedbateľné.}, šikovne zistíme ako súvisí $\Delta x$ s~$\Delta T$.
+je o~niekoľko rádov menšie a~teda oproti $\Delta x$ zanedbateľné.} šikovne zistíme ako súvisí $\Delta x$ s~$\Delta T$.
 $$k{\left(x+\Delta x\right)}^2 - kx^2 \approx 2kx\Delta x = nR\Delta T \hspace{3cm}
 \frac{\Delta x}{\Delta T} = \frac{nR}{2kx}\text{.}$$
 
