--- a/files/fks/solutions/task7.tex
+++ b/files/fks/solutions/task7.tex
@@ -15,7 +15,7 @@ elektrónov medzi rôznymi energetickými hladinami v~atómoch a molekulách, kt
 Aj keby sme prítomnosť spektrálnych čiar uvažovali, na výsledok by to nemalo veľký vplyv.
 Hviezda by totiž musela mať naozaj \emph{veľmi exotické} zloženie, aby to bolo dôvod na to, že ju vidíme zelenú. 
 
-\Picture{fraunhofer.pdf}{3cm}[Obrázok \emph{Fraunhoferových čiar} -- spektrálnych čiar v~spektre Slnka.%
+\insertPicture{fraunhofer.pdf}{3cm}[Obrázok \emph{Fraunhoferových čiar} -- spektrálnych čiar v~spektre Slnka.%
 %\footnote{Obrázok je prepožičaný z~\url{https://upload.wikimedia.org/wikipedia/commons/2/2f/Fraunhofer_lines.svg}.}
 ][fraunhofer]
 
@@ -44,7 +44,7 @@ Toto je dôvod, prečo astronómovia nepozorujú zelené hviezdy.\footnote{V sku
 Už vieme, prečo nie sú hviezdy zelené, no musíme ešte zistiť, akú farbu majú vlastne hviezdy, ktoré by \uv{mali byť zelené}.
 Môžeme použiť buď tento obrázok\footnote{\url{https://upload.wikimedia.org/wikipedia/commons/b/ba/PlanckianLocus.png}}
 
-\Picture{planck.png}{8cm}[Na obrázku môžeme vidieť krivku, na ktorej je znázornená teplota v~Kelvinoch. A~príslušné farby, ktoré zodpovedajú príslušnej teplote absolútne čierneho telesa.][planck]
+\insertPicture{planck.png}{8cm}[Na obrázku môžeme vidieť krivku, na ktorej je znázornená teplota v~Kelvinoch. A~príslušné farby, ktoré zodpovedajú príslušnej teplote absolútne čierneho telesa.][planck]
 
 alebo si to skúsime sami vypočítať. Na to, aby sme to vypočítali, však musíme vedieť, ako presne sú naše čapíky citlivé na svetlo rôznych vlnových dĺžok.
 Našťastie nemusíme dlho hladať, pretože ak sa trošku posnažíme, dopátrame sa k~tzv.
