--- a/files/fks/tasks/task3.tex
+++ b/files/fks/tasks/task3.tex
@@ -10,4 +10,4 @@ Maťo váži \SI{81}{\kilo\gram}, je vysoký \SI{185}{\centi\metre} a~môžete p
 Vzdialenosť medzi jeho nohami je \SI{40}{\centi\metre} a~koeficient trenia medzi topánkami a podlahou metra je \num{0.5}.
 Maťa by teraz zaujímalo, pre aké hodnoty zrýchlenia sa mu podarí udržať rovnováhu presúvaním ťažiska z~jednej nohy na druhú.
 
-\Picture{task3}{4cm}[Maťovo ťažisko]
+\insertPicture{task3}{4cm}[Maťovo ťažisko]
