--- a/files/fks/solutions/task4.tex
+++ b/files/fks/solutions/task4.tex
@@ -68,11 +68,11 @@ Odmerané máme, môžeme pristúpiť k~interpretácii údajov. Tu sa ujíma slo
 
 Grafický výstup merania závislosti prírastku hmotnosti špagiet od teploty (prvá časť úlohy) by mohol vyzerať nejako takto: 
 
-\Picture{graf1.pdf}{4cm}[Grafické spracovanie prvého merania (Áno, nemám graf plný bodov, lebo som si povedala, že na ukážku to bude stačiť. Verím, že vy máte lepšie.)][first]
+\insertPicture{graf1.pdf}{4cm}[Grafické spracovanie prvého merania (Áno, nemám graf plný bodov, lebo som si povedala, že na ukážku to bude stačiť. Verím, že vy máte lepšie.)][first]
 
 Druhé meranie nám poskytlo takýto výsledok:
 
-\Picture{graf2.pdf}{4cm}[Grafické spracovanie druhého merania][second]
+\insertPicture{graf2.pdf}{4cm}[Grafické spracovanie druhého merania][second]
 
 %V~tomto prípade ide očividne o~lineárnu závislosť. Opäť vieme veľmi jednoducho zistiť jej koeficienty a~ak sme veľkí makači,
 %pomocou funkcie LINEST\footnote{\url{http://www.colby.edu/chemistry/PChem/notes/linest.pdf}} vieme zistiť smerodajné odchýlky týchto koeficientov.
