--- a/TODO
+++ b/TODO
@@ -5,6 +5,6 @@
 - finetunovať polohy vecí v headeri
 - viacero autorov vzoráku (xkeyval alebo oddeliť bodkočiarkami, potom typeset čiarok a "a" bez boldu)
 
-# Style guide
+# Štýly
 
-- Kam chceme písať 
+- Kam chceme písať footnote (pred vs za bodku)?
