Removed some shit

--- a/files/fks/solutions/task3.tex
+++ b/files/fks/solutions/task3.tex
@@ -35,7 +35,7 @@ rýchlo dostávame podmienku
 $$
   f mg = ma \qquad\Rightarrow\qquad a = fg \text{.}
 $$
-To zamená, že ak bude zrýchlenie metra väčšie ako $ 0.5g \approx \SI{5}{\meter\per\second\squared}$, Maťo,
+To znamená, že ak bude zrýchlenie metra väčšie ako $\SI{0.5}{\gforce} \approx \SI{5}{\meter\per\second\squared}$, Maťo,
 nech sa akokoľvek snaží nespadnúť, sa začne na podlahe metra šmýkať v~protismere
 jeho jazdy.
 
